--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SubActivity1"></activity>
+        <activity android:name=".SubActivity1" />
+        <activity android:name=".LinearActivity1" />
+        <activity android:name=".SubActivity2"></activity>
     </application>
 
 </manifest>
