--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/NoTitle">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +21,8 @@
         <activity android:name=".SubActivity1" />
         <activity android:name=".LinearActivity1" />
         <activity android:name=".SubActivity2" />
-        <activity android:name=".SubActivity3"></activity>
+        <activity android:name=".SubActivity3" />
+        <activity android:name=".SubActivity4"></activity>
     </application>
 
 </manifest>
