--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,13 @@
         <activity android:name=".LinearActivity1" />
         <activity android:name=".SubActivity2" />
         <activity android:name=".SubActivity3" />
-        <activity android:name=".SubActivity4"></activity>
+        <activity android:name=".SubActivity4" />
+        <activity android:name=".SubActivity5" />
+
+        <service
+            android:name=".TimerService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
