--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,10 @@
             android:screenOrientation="portrait" />
         <activity android:name=".SubActivity6" />
         <activity android:name=".SubActivity7" />
-        <activity android:name=".SubActivity8"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".SubActivity8"
+            android:screenOrientation="portrait" />
+        <activity android:name=".SubActivity9"/>
     </application>
 
 </manifest>
